--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 15px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
 
-  Order Summary
+  <div class="card-container">
+    <div class="card">
+      <h1>Order Summary</h1>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+    device anywhere you like!
+      </p>
 
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+      <div class="plan-container">
+        <h2>Annual Plan</h2>
+        <p>$59.99/year</p>
+        <a href="#">Change</a>
+      </div>
   
+      <button class="btn">Proceed to Payment</button>
+
+      <p>Cancel Order</p>
+  
+    </div>
+  </div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/tsilvalisbon" target="_blank">Tomás Silva</a>.
   </div>
 </body>
 </html>
