Linked CSS and Formatted HTML

--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Order summary card</title>
+  </head>
+  <body>
+    <div class="card-container">
+      <div class="card">
+        <h1>Order Summary</h1>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+        <p>
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 15px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <div class="plan-container">
+          <h2>Annual Plan</h2>
+          <p>$59.99/year</p>
+          <a href="#">Change</a>
+        </div>
 
-  <div class="card-container">
-    <div class="card">
-      <h1>Order Summary</h1>
+        <button class="btn">Proceed to Payment</button>
 
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
-    device anywhere you like!
-      </p>
-
-      <div class="plan-container">
-        <h2>Annual Plan</h2>
-        <p>$59.99/year</p>
-        <a href="#">Change</a>
+        <p>Cancel Order</p>
       </div>
-  
-      <button class="btn">Proceed to Payment</button>
-
-      <p>Cancel Order</p>
-  
     </div>
-  </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.github.com/tsilvalisbon" target="_blank">Tomás Silva</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.github.com/tsilvalisbon" target="_blank"
+        >Tomás Silva</a
+      >.
+    </div>
+  </body>
 </html>
