--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       rel="icon"
       type="image/png"
@@ -15,6 +15,7 @@
   <body>
     <div class="card-container">
       <div class="card">
+        <div class="img-container"></div>
         <h1>Order Summary</h1>
 
         <p>
