--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
     <div class="card-container">
       <div class="card">
         <div class="img-container"></div>
-        <h1>Order Summary</h1>
+        <div class="info-container">
+          <h1>Order Summary</h1>
 
-        <p>
-          You can now listen to millions of songs, audiobooks, and podcasts on
-          any device anywhere you like!
-        </p>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
 
-        <div class="plan-container">
-          <h2>Annual Plan</h2>
-          <p>$59.99/year</p>
-          <a href="#">Change</a>
+          <div class="plan-container">
+            <h2>Annual Plan</h2>
+            <p>$59.99/year</p>
+            <a href="#">Change</a>
+          </div>
+
+          <button class="btn">Proceed to Payment</button>
+
+          <p>Cancel Order</p>
         </div>
-
-        <button class="btn">Proceed to Payment</button>
-
-        <p>Cancel Order</p>
       </div>
     </div>
 
