Info Div Added and Styled

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
       <div class="card">
         <div class="img-container"></div>
         <div class="info-container">
-          <h1>Order Summary</h1>
+          <div class="info">
+            <h1>Order Summary</h1>
 
-          <p>
-            You can now listen to millions of songs, audiobooks, and podcasts on
-            any device anywhere you like!
-          </p>
+            <p>
+              You can now listen to millions of songs, audiobooks, and podcasts
+              on any device anywhere you like!
+            </p>
+          </div>
 
           <div class="plan-container">
             <h2>Annual Plan</h2>
