Annual Plan Section Done

--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
           </div>
 
           <div class="plan-container">
-            <h2>Annual Plan</h2>
-            <p>$59.99/year</p>
-            <a href="#">Change</a>
+            <div class="plan-container_left">
+              <img src="images/icon-music.svg" alt="Music Icon" />
+              <div class="price">
+                <h2>Annual Plan</h2>
+                <p>$59.99/year</p>
+              </div>
+            </div>
+
+            <div class="plan-container_right">
+              <a href="#">Change</a>
+            </div>
           </div>
 
           <button class="btn">Proceed to Payment</button>
