--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </div>
           </div>
 
-          <button class="btn">Proceed to Payment</button>
+          <div class="btn">
+            <button>Proceed to Payment</button>
+          </div>
 
           <p>Cancel Order</p>
         </div>
