Completed Desktop Design

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
           <div class="btn">
             <button>Proceed to Payment</button>
           </div>
-
-          <p>Cancel Order</p>
+          <div class="cancel">
+            <p>Cancel Order</p>
+          </div>
         </div>
       </div>
     </div>
